--- a/src/miniJson/miniJson.csproj
+++ b/src/miniJson/miniJson.csproj
@@ -10,6 +10,7 @@
     <PackageReleaseNotes>3996468 Master</PackageReleaseNotes>
     <AssemblyVersion>1.0.*</AssemblyVersion>
     <Deterministic>False</Deterministic>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
