--- a/src/miniJson/miniJson.csproj
+++ b/src/miniJson/miniJson.csproj
@@ -8,9 +8,9 @@
     <Company>Simployer</Company>
     <Description>Super simple JSON implementation</Description>
     <PackageReleaseNotes>3996468 Master</PackageReleaseNotes>
-    <AssemblyVersion>1.0.*</AssemblyVersion>
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <Deterministic>False</Deterministic>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
